feat: research-backed flip engine — real margin with competition haircut, GP/hr scoring, momentum only on high-vol items, grade by GP/hr not arbitrary thresholds, multi-condition signals